make prepare_tile and remove_flightline_overlap separate steps

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,11 +7,16 @@ export(get_stratum_cover)
 export(highest_density_interval)
 export(is_prepared_tile)
 export(layer_summary_metrics)
+export(plot_flightlines)
 export(prepare_tile)
 export(remove_flightline_overlap)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,group_by)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,coord_equal)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
 importFrom(raster,raster)
 importFrom(raster,rasterize)
 importFrom(raster,setValues)
