--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,6 +2,7 @@ Package: CERMBlidar
 Type: Package
 Title: A collection of functions to process aerial LIDAR data.
 Version: 0.1.0
+Date: 2018-12-13
 Authors@R: c(
   person("Michael", "Bedward", role = c("aut", "cre"), email = "michael.bedward@gmail.com"),
   person("Meaghan", "Jenkins", role = "aut", email = "mjenkins@uow.edu.au")
@@ -16,6 +17,7 @@ Suggests: testthat
 LinkingTo: Rcpp
 Imports: Rcpp,
   dplyr,
+  ggplot2,
   lidR,
   mgcv,
   raster,
