--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,13 +13,17 @@ License: What license is it under?
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.0
-Suggests: testthat
+Suggests: testthat,
+    knitr,
+    rmarkdown
 LinkingTo: Rcpp
+Depends: R (>= 3.5.0),
+  lidR,
+  raster
 Imports: Rcpp,
   dplyr,
   ggplot2,
-  lidR,
   mgcv,
-  raster,
   sf,
   sp
+VignetteBuilder: knitr
