--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,8 @@ export(layer_summary_metrics)
 export(plot_flightlines)
 export(prepare_tile)
 export(remove_flightline_overlap)
+import(lidR)
+import(raster)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,group_by)
@@ -17,9 +19,5 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_equal)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
-importFrom(raster,raster)
-importFrom(raster,rasterize)
-importFrom(raster,setValues)
-importFrom(raster,stack)
 importFrom(sf,st_as_sf)
 useDynLib(CERMBlidar)
