--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,5 +19,6 @@ importFrom(ggplot2,aes)
 importFrom(ggplot2,coord_equal)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
+importFrom(ggplot2,theme)
 importFrom(sf,st_as_sf)
 useDynLib(CERMBlidar)
