--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CERMBlidar
 Type: Package
 Title: A collection of functions to process aerial LIDAR data.
-Version: 0.1.3
-Date: 2019-02-07
+Version: 0.1.4
+Date: 2019-03-25
 Authors@R: c(
   person("Michael", "Bedward", role = c("aut", "cre"), email = "michael.bedward@gmail.com"),
   person("Meaghan", "Jenkins", role = "aut", email = "mjenkins@uow.edu.au")
@@ -20,11 +20,12 @@ Suggests: testthat,
     xml2
 LinkingTo: Rcpp
 Depends: R (>= 3.5.0),
-  lidR,
+  lidR (>= 2.0.2),
   raster
 Imports: Rcpp,
   dplyr,
   ggplot2,
+  lubridate,
   mgcv,
   sf,
   sp,
