--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(check_strata)
 export(compile_metadata)
 export(get_bounding_rectangle)
 export(get_building_points)
-export(get_flightline_dir)
+export(get_flightline_info)
 export(get_scan_times)
 export(get_stratum_counts)
 export(get_stratum_cover)
@@ -23,7 +23,9 @@ import(raster)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,arrange)
+importFrom(dplyr,case_when)
 importFrom(dplyr,group_by)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,summarize)
 importFrom(ggplot2,aes)
