--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,21 @@
 Package: CERMBlidar
 Type: Package
-Title: A collection of functions to process aerial LIDAR data.
-Version: 0.1.6
-Date: 2019-04-04
+Title: A collection of functions to process aerial LIDAR data
+Version: 0.1.7
+Date: 2019-04-09
 Authors@R: c(
   person("Meaghan", "Jenkins", role = "aut", email = "mjenkins@uow.edu.au"),
   person("Michael", "Bedward", role = c("aut", "cre"), email = "michael.bedward@gmail.com")
   )
-Description: Functions used by the Centre for Environmental Risk Management of Bushfires, 
-  University of Wollongong, to prepare and analyse aerial LIDAR data. 
-License: MIT
+Description: Functions to prepare and analyse aerial LIDAR data. Written for
+  the Centre for Environmental Risk Management of Bushfires, University of 
+  Wollongong, Australia. Most functions are wrappers around those in the lidR
+  package. The package may be freely used by anyone, but please note that: (1) 
+  Some functions are particular to data conventions used by New South Wales 
+  State Government and might not be suitable for general use; (2) The package
+  is at an early stage of development and features are likely to change
+  without notice between successive 0.1.x versions.
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
