prepare_tile Remove sparse flight lines on import Add check for empty point cloud

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(.min_rectangle)
 export(check_flightlines)
 export(check_strata)
 export(compile_metadata)
+export(filter_flightlines)
 export(get_bounding_rectangle)
 export(get_building_points)
 export(get_flightline_info)
