Better handling of empty tiles

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(get_scan_times)
 export(get_stratum_counts)
 export(get_stratum_cover)
 export(highest_density_interval)
+export(is_empty_tile)
 export(is_prepared_tile)
 export(layer_summary_metrics)
 export(plot_flightlines)
