general tidy up
Renamed main_functions.R to tile_function.R.
Ensure las header is updated after modifying data.
New utility functions.
Replace some error traps with warnings.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(filter_flightlines)
 export(get_bounding_rectangle)
 export(get_building_points)
 export(get_flightline_info)
+export(get_point_density)
 export(get_scan_times)
 export(get_stratum_counts)
 export(get_stratum_cover)
@@ -15,11 +16,13 @@ export(highest_density_interval)
 export(is_empty_tile)
 export(is_prepared_tile)
 export(layer_summary_metrics)
+export(mandatory_input_fields)
 export(plot_flightlines)
 export(prepare_tile)
 export(read_html_metadata)
 export(read_las_header)
 export(remove_flightline_overlap)
+export(update_tile_header)
 import(lidR)
 import(raster)
 importFrom(Rcpp,sourceCpp)
