added function reproject_tile

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(prepare_tile)
 export(read_html_metadata)
 export(read_las_header)
 export(remove_flightline_overlap)
+export(reproject_tile)
 export(update_tile_header)
 import(lidR)
 import(raster)
