--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CERMBlidar
 Type: Package
 Title: A collection of functions to process aerial LIDAR data
-Version: 0.1.17
-Date: 2019-08-28
+Version: 0.1.18
+Date: 2019-08-29
 Authors@R: c(
   person("Meaghan", "Jenkins", role = "aut", email = "mjenkins@uow.edu.au"),
   person("Michael", "Bedward", role = c("aut", "cre"), email = "michael.bedward@gmail.com")
@@ -15,7 +15,7 @@ Description: Functions to prepare and analyse aerial LIDAR data. Written for
   State Government and might not be suitable for general use; (2) The package
   is at an early stage of development and features are likely to change
   without notice between successive 0.x versions.
-License: MIT + file LICENSE
+License: GPL-2 + file LICENSE
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
