New summary functions get_class_frequencies, get_las_bounds

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,9 @@ export(compile_metadata)
 export(filter_flightlines)
 export(get_bounding_rectangle)
 export(get_building_points)
+export(get_class_frequencies)
 export(get_flightline_info)
+export(get_las_bounds)
 export(get_point_density)
 export(get_scan_times)
 export(get_stratum_counts)
