mask_tile and more tweaks to prepare_tile

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,6 +19,7 @@ export(is_empty_tile)
 export(is_prepared_tile)
 export(layer_summary_metrics)
 export(mandatory_input_fields)
+export(mask_tile)
 export(plot_flightlines)
 export(prepare_tile)
 export(read_html_metadata)
