relate_strata function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,7 @@ export(plot_flightlines)
 export(prepare_tile)
 export(read_html_metadata)
 export(read_las_header)
+export(relate_strata)
 export(remove_flightline_overlap)
 export(reproject_tile)
 export(update_tile_header)
