working on new overlap removal function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,8 +25,8 @@ export(plot_flightlines)
 export(prepare_tile)
 export(read_html_metadata)
 export(read_las_header)
-export(relate_strata)
 export(remove_flightline_overlap)
+export(remove_flightline_overlap2)
 export(reproject_tile)
 export(update_tile_header)
 import(lidR)
@@ -34,8 +34,10 @@ import(raster)
 importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,"%>%")
 importFrom(ggplot2,aes)
+importFrom(ggplot2,as_labeller)
 importFrom(ggplot2,coord_equal)
 importFrom(ggplot2,element_blank)
+importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme)
