Better flight line and CRS handling

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,8 @@
 
 export("%>%")
 export(.min_rectangle)
-export(check_flightlines)
+export(check_flightline_orientation)
+export(check_overlap_bias)
 export(check_strata)
 export(compile_metadata)
 export(filter_flightlines)
@@ -10,6 +11,9 @@ export(get_bounding_rectangle)
 export(get_building_points)
 export(get_class_frequencies)
 export(get_flightline_info)
+export(get_flightline_overlaps)
+export(get_flightline_polygons)
+export(get_horizontal_crs)
 export(get_las_bounds)
 export(get_max_height)
 export(get_point_density)
@@ -21,11 +25,11 @@ export(is_empty_tile)
 export(is_prepared_tile)
 export(mandatory_input_fields)
 export(mask_tile)
-export(plot_flightlines)
+export(plot_flightline_points)
 export(prepare_tile)
 export(read_html_metadata)
 export(read_las_header)
-export(remove_flightline_overlap)
+export(remove_flightline_bias)
 export(reproject_tile)
 export(update_tile_header)
 import(lidR)
