--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: CERMBlidar
 Type: Package
 Title: A collection of functions to process aerial LIDAR data
-Version: 0.1.38
-Date: 2021-10-22
+Version: 0.2.0
+Date: 2021-10-29
 Authors@R: c(
   person("Michael", "Bedward", role = c("aut", "cre"), email = "michael.bedward@gmail.com"),
-  person("Meaghan", "Jenkins", role = "aut", email = "mjenkins@uow.edu.au")
+  person("Meaghan", "Jenkins", role = "aut")
   )
 Description: Functions to prepare and analyse aerial LIDAR data. Written for
   the Centre for Environmental Risk Management of Bushfires, University of 
