--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CERMBlidar
 Type: Package
 Title: A collection of functions to process aerial LIDAR data
-Version: 0.2.1
-Date: 2021-11-01
+Version: 0.3.0
+Date: 2021-11-11
 Authors@R: c(
   person("Michael", "Bedward", role = c("aut", "cre"), email = "michael.bedward@gmail.com"),
   person("Meaghan", "Jenkins", role = "aut")
@@ -26,8 +26,7 @@ Suggests: testthat,
     xml2
 LinkingTo: Rcpp
 Depends: R (>= 4.0.0),
-  lidR (>= 3.1.0),
-  raster
+  lidR (>= 3.1.0)
 Imports: Rcpp,
   dplyr,
   ggplot2,
@@ -35,5 +34,6 @@ Imports: Rcpp,
   mgcv,
   sf,
   sp,
-  stringr
+  stringr,
+  terra
 VignetteBuilder: knitr
