fix tests; add get_strata_transform()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(get_las_bounds)
 export(get_max_height)
 export(get_point_density)
 export(get_scan_times)
+export(get_strata_transform)
 export(get_stratum_counts)
 export(get_stratum_cover)
 export(get_summary_counts)
