--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CERMBlidar
 Type: Package
 Title: A collection of functions to process aerial LIDAR data
-Version: 0.3.1
-Date: 2021-11-12
+Version: 0.3.2
+Date: 2021-11-15
 Authors@R: c(
   person("Michael", "Bedward", role = c("aut", "cre"), email = "michael.bedward@gmail.com"),
   person("Meaghan", "Jenkins", role = "aut")
@@ -18,7 +18,7 @@ Description: Functions to prepare and analyse aerial LIDAR data. Written for
 License: GPL-2 + file LICENSE
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.1
+RoxygenNote: 7.1.2
 Suggests: testthat,
     knitr,
     rmarkdown,
@@ -32,8 +32,8 @@ Imports: Rcpp,
   ggplot2,
   lubridate,
   mgcv,
-  sf,
-  sp,
+  sf (>= 1.0-3),
+  sp (>= 1.4-5),
   stringr,
-  terra
+  terra (>= 1.4-11)
 VignetteBuilder: knitr
