remove_zero_gpstimes()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,7 @@ export(prepare_tile)
 export(read_html_metadata)
 export(read_las_header)
 export(remove_flightline_bias)
+export(remove_zero_gpstimes)
 export(reproject_tile)
 export(update_tile_header)
 import(lidR)
