--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: CERMBlidar
 Type: Package
 Title: A collection of functions to process aerial LIDAR data
-Version: 0.3.12
-Date: 2022-05-20
+Version: 0.3.13
+Date: 2022-10-13
 Authors@R: c(
   person("Michael", "Bedward", role = c("aut", "cre"), email = "michael.bedward@gmail.com"),
   person("Meaghan", "Jenkins", role = "aut")
@@ -16,9 +16,10 @@ Description: Functions to prepare and analyse aerial LIDAR data. Written for
   is at an early stage of development and features are likely to change
   without notice between successive 0.x versions.
 License: GPL-2 + file LICENSE
+URL: https://github.com/mbedward/CERMBlidar
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.1
 Suggests: testthat,
     knitr,
     rmarkdown,
@@ -32,9 +33,10 @@ Imports: Rcpp,
   ggplot2,
   lubridate,
   mgcv,
-  sf (>= 1.0-3),
-  sp (>= 1.4-5),
+  sf (>= 1.0-8),
+  sp (>= 1.5-0),
   stringr,
-  raster,
-  terra (>= 1.4-11)
+  raster (>= 3.5-29),
+  terra (>= 1.6-17),
+  tolerance (>= 2.0.0.9999)
 VignetteBuilder: knitr
