cover change calculations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(filter_flightlines)
 export(get_bounding_rectangle)
 export(get_building_points)
 export(get_class_frequencies)
+export(get_cover_difference)
 export(get_cover_quantiles)
 export(get_flightline_info)
 export(get_flightline_overlaps)
