fix package check warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,9 +38,8 @@ export(remove_zero_gpstimes)
 export(reproject_tile)
 export(update_tile_header)
 import(lidR)
-import(raster)
+import(terra)
 importFrom(Rcpp,sourceCpp)
-importFrom(dplyr,"%>%")
 importFrom(ggplot2,aes)
 importFrom(ggplot2,as_labeller)
 importFrom(ggplot2,coord_equal)
@@ -49,10 +48,16 @@ importFrom(ggplot2,facet_wrap)
 importFrom(ggplot2,geom_point)
 importFrom(ggplot2,ggplot)
 importFrom(ggplot2,theme)
+importFrom(graphics,abline)
+importFrom(graphics,curve)
+importFrom(graphics,legend)
 importFrom(magrittr,"%>%")
+importFrom(rlang,.data)
 importFrom(sf,st_polygon)
 importFrom(sf,st_sf)
 importFrom(sf,st_sfc)
+importFrom(stats,dbeta)
+importFrom(stats,qbeta)
 importFrom(stringr,str_extract)
 importFrom(stringr,str_replace_all)
 importFrom(stringr,str_subset)
