--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: CERMBlidar
 Type: Package
 Title: A collection of functions to process aerial LIDAR data
 Version: 0.3.15
-Date: 2022-10-24
+Date: 2022-10-25
 Authors@R: c(
   person("Michael", "Bedward", role = c("aut", "cre"), email = "michael.bedward@gmail.com"),
   person("Meaghan", "Jenkins", role = "aut")
@@ -12,9 +12,9 @@ Description: Functions to prepare and analyse aerial LIDAR data. Written for
   Wollongong, Australia. Most functions are wrappers around those in the lidR
   package. The package may be freely used by anyone, but please note that: (1) 
   Some functions are particular to data conventions used by New South Wales 
-  State Government and might not be suitable for general use; (2) The package
-  is at an early stage of development and features are likely to change
-  without notice between successive 0.x versions.
+  State Government and might not be suitable for general use; (2) There are
+  likely to be breaking changes in package code between successive 0.x 
+  versions.
 License: GPL-2 + file LICENSE
 URL: https://github.com/mbedward/CERMBlidar
 Encoding: UTF-8
@@ -31,11 +31,16 @@ Depends: R (>= 4.0.0),
 Imports: Rcpp,
   dplyr,
   ggplot2,
+  glue,
   lubridate,
+  magrittr,
   mgcv,
+  rlang,
+  rlas,
   sf (>= 1.0-8),
   sp (>= 1.5-0),
   stringr,
   raster (>= 3.5-29),
-  terra (>= 1.6-17)
+  terra (>= 1.6-17),
+  tidyr
 VignetteBuilder: knitr
