--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,7 @@ export(remove_zero_gpstimes)
 export(reproject_tile)
 export(update_tile_header)
 import(lidR)
+import(raster)
 import(terra)
 importFrom(Rcpp,sourceCpp)
 importFrom(ggplot2,aes)
